--- a/my_website/About.css
+++ b/my_website/About.css
@@ -1,22 +1,37 @@
+@font-face { font-family: last; src: url('Images/TheLastCall.ttf'); } 
+@font-face { font-family: hang; src: url('Images/Hanged Letters.ttf'); }
+@font-face { font-family: hello; src: url('Images/hi.ttf'); }
+@font-face { font-family: ok; src: url('Images/kk.ttf'); }
 body{
-    font-family:"Comic Sans Ms", fantasy;
+    background-repeat: no-repeat;
+    font-family:"last";
 color: #003366;
 text-align:center;
-background-color: LightSteelBlue;
+font-size:40px;
  }
 h1{ 
-    margin-top: -200px;
-    font-size:50px;
-    text-align:center;
+    margin-top: 30px;
+    width:100px;
+    text-align:left;
     color:maroon;
 }
- 
-a{
-    color:yellow;
-    background-color: navy;
-    font-size: 50px;
-    display:block;
-    width:250px;
-
+th{
+    background-color: lightsteelblue;
     
 }
+ table{
+     color:white;
+     
+
+}
+p{
+    float: right;
+    color:white;
+    font-size: 28px;
+    background-color: gray;
+    font-family: last;
+}
+
+
+
+    
