--- a/my_website/About.css
+++ b/my_website/About.css
@@ -4,6 +4,7 @@
 @font-face { font-family: ok; src: url('Images/kk.ttf'); }
 body{
     background-repeat: no-repeat;
+     background-size: 2150px 1750px;
     font-family:"last";
 color: #003366;
 text-align:center;
@@ -30,8 +31,72 @@ p{
     font-size: 28px;
     background-color: gray;
     font-family: last;
+    margin-top: 10px;
+}
+h5{
+    float:right;
+    color:white;
+    font-size: 50px;
+    background-color:gray;
+    margin-top: -10px;
+}
+h2{
+    color:white;
+    font-size: 60px;
+    margin-top:10px;
+}
+h4{
+    float:right;
+    margin-top: -30px;
+    color:white;
+    margin-left: -8000px;
+    background-color:lightsteelblue;
+    font-size: 50px;
+}
+h6{
+    float: left;
+    color:white;
+    margin-top: 100px;
+    font-size: 50px;
+    background-color: lightsteelblue;
+}
+#navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: lightsteelblue;
 }
 
+#navbar li {
+    float: left;
+}
 
-
+#navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+#hobbies {
+    float:right;
+    color:white;
+    font-size: 40px;
+    background-color: gray;
     
+}
+#songs {
+    font-size: 30px;
+    float: left;
+    margin-top: 100px;
+    color:white;
+    background-color:gray;
+}
+h3{
+    float:right;
+    margin-right: 110px;
+}
+h5{
+    font-family:ok;
+}
