--- a/my_website/index.css
+++ b/my_website/index.css
@@ -46,7 +46,7 @@ p{
  color:white;
  font-size: -40px;
 }
- ul {
+#navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -55,20 +55,23 @@ p{
     margin-top: -10px;
 }
 
-li {
+#navbar li {
     float: left;
 }
 
-li a {
+#navbar li {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-li a:hover {
+#navbar li a:hover {
     background-color: black;
     text-align:center;
+}
+#navbar a:visited{
+ color: white;
 }
     h3{
      text-align:center;
