--- a/my_website/portfolio.css
+++ b/my_website/portfolio.css
@@ -4,13 +4,23 @@ body{
     background-repeat: no-repeat;
      background-size: 2150px 1750px;
     font-family:"last";
-
+    
 }
+
 h1{
     font-size: 60px;
     text-align:center;
     color:white;
 }
+
+h2{
+    color:blue;
+}
+p{
+    font-size:70px;
+    color:white;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -35,4 +45,5 @@ li a:hover {
 }
 a{
     font-size: 40px;
+    
 }
